k8s/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - image: mongo-express
        name: mongo-express
        ports:
        - containerPort: 8081
      nodeSelector:
        eks.amazonaws.com/nodegroup: application-node-group
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
  name: mongo-express-service
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: mongo-express
